--- a/README.org
+++ b/README.org
@@ -24,7 +24,7 @@
 
 Este repositório contém a fonte em LaTeX dos slides, testes e provas
 dos meus cursos de Cálculo 2 e Cálculo 3 do semestre 2021.1 da UFF -
-que por conta da pandemia acontece(u) de fevereiro a junho de 2021.
+que por conta da pandemia acontece(u) de junho a setembro de 2021.
 
 Páginas dos cursos (com links pra todos os PDFs e vídeos): [[http://angg.twu.net/2021.1-C2.html][C2]], [[http://angg.twu.net/2021.1-C3.html][C3]].
 
@@ -84,3 +84,9 @@ git push -u origin main
 # (find-fline "~/2021-1-C2-C3/README.org")
 
 #+end_comment
+
+# Local Variables:
+# coding:               utf-8-unix
+# modes:                (org-mode fundamental-mode)
+# org-html-postamble:   nil
+# End:
